--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.0.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "koa2": "^2.0.0-alpha.7",
     "mysql": "^2.15.0",
